--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 {% block site_content %}
     <section class="banner">
         <header>
-            <h1>Non-Destructive Testing of Building Structures</h1>
+            <h1> Non-Destructive Test Methods for Control of Building Structures</h1>
             <h2>Test methods you can order</h2>
         </header>
 
@@ -29,40 +29,3 @@
 
     </section>
 {% endblock %}
-
-
-{#    <nav class="topmenu">#}
-{#        <ul>#}
-{#            <li><a href="#">Home Page</a></li>#}
-{#            <li><a href="about.html" target="_blank">About Page</a></li>#}
-{#        </ul>#}
-{#    </nav>#}
-{##}
-{#    <main class="site-content">#}
-{#        <section>#}
-{#            <p>The Manta Ray</p>#}
-{#            <figure>#}
-{#                <img src="https://i.pinimg.com/564x/8c/ca/e4/8ccae499c4741ce53a9eca0dfdee81d1.jpg" alt="Manta image">#}
-{#                <figcaption>Fig.1 - A flying manta ray.</figcaption>#}
-{#            </figure>#}
-{#        </section>#}
-{##}
-{#        <details>#}
-{#            <summary>Some details</summary>#}
-{#            <p><a href="https://en.wikipedia.org/wiki/Manta_ray" target="_blank">More info about Manta rays.</a></p>#}
-{#            <p>More info about Merlins.</p>#}
-{#        </details>#}
-{#    </main>#}
-{##}
-{#    <footer class=site-footer>#}
-{#        <address>#}
-{#            Street Address: Todor Dzhaabarov str.<br/>#}
-{#            District: Manastirski Livadi<br/>#}
-{#            City: Sofia<br/>#}
-{#            Country: Bulgaria<br/>#}
-{#            Tel: +359 899 888 508#}
-{#        </address>#}
-{##}
-{#        <p>All Rights Reserved &copy; &ZHcy;-Solutions</p>#}
-{#    </footer>#}
-
