--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,7 +2,8 @@
     <nav class="site-nav">
         <ul class="list-horizontal">
             <li class="list-item"><a href="{% url 'index' %}">Home</a></li>
-{#            <li class="list-item"><a href="{% url 'tests list' %}">Tests</a></li>#}
+            <li class="list-item"><a href="{% url 'ndts list' %}">NDTs</a></li>
+            <li class="list-item"><a href="{% url 'create ndt' %}">Add NDT</a></li>
             <li class="list-item"><a href="#">Sign in</a></li>
             <li class="list-item"><a href="#">Sign up</a></li>
         </ul>
