--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col">
                 Already have an account?
-                <a href="#" class="button">Sign in</a>
+                <a href="{% url 'sign in' %}" class="button">Sign in</a>
             </div>
             <div class="col">
                 Do not have an account?
