--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,7 +4,8 @@
             <li class="list-item"><a href="{% url 'index' %}">Home</a></li>
             <li class="list-item"><a href="{% url 'ndts list' %}">NDTs</a></li>
             <li class="list-item"><a href="{% url 'create ndt' %}">Add NDT</a></li>
-            <li class="list-item"><a href="#">Sign in</a></li>
+            <li class="list-item"><a href="{% url 'sign in' %}">Sign in</a></li>
+            <li class="list-item"><a href="{% url 'sign out' %}">Sign out</a></li>
             <li class="list-item"><a href="#">Sign up</a></li>
         </ul>
     </nav>
