--- a/templates/ndt_details.html
+++ b/templates/ndt_details.html
@@ -7,7 +7,7 @@
 
 {% block site_content%}
     <div class="test-image">
-        <img src="{{ ndt.image }}" alt="image of {{ ndt.name }}">
+        <img src="{{ ndt.image.url }}" alt="image of {{ ndt.name }}">
     </div>
     <div class="test-info">
         <ul class="list-test-details list-horizontal">
