--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,6 +15,8 @@ section header {
 
 .site-nav {
     background-color: rgb(248, 249, 250);
+    display: flex;
+    justify-content: space-between;
 }
 
 .site-nav .list-item {
