--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col">
                 Do not have an account?
-                <a href="#" class="button">Sign up</a>
+                <a href="{% url 'sign up' %}" class="button">Sign up</a>
             </div>
         </div>
 
