--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -4,9 +4,15 @@
             <li class="list-item"><a href="{% url 'index' %}">Home</a></li>
             <li class="list-item"><a href="{% url 'ndts list' %}">NDTs</a></li>
             <li class="list-item"><a href="{% url 'create ndt' %}">Add NDT</a></li>
-            <li class="list-item"><a href="{% url 'sign in' %}">Sign in</a></li>
-            <li class="list-item"><a href="{% url 'sign out' %}">Sign out</a></li>
-            <li class="list-item"><a href="#">Sign up</a></li>
+        </ul>
+        <ul class="list-horizontal">
+            {% if user.is_authenticated %}
+{#                <li>>{{ user }}</li>#}
+                <li class="list-item"><a href="{% url 'sign out' %}">Sign out</a></li>
+            {% else %}
+                <li class="list-item"><a href="{% url 'sign in' %}">Sign in</a></li>
+                <li class="list-item"><a href="{% url 'sign up' %}">Sign up</a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
