Added forms, views and fixed bugs

--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -4,6 +4,7 @@
     <form action="{% url 'sign up' %}" method="post">
         {% csrf_token %}
         {{ form }}
-        <button>Sign up</button>
+        <button class="btn btn-success">Sign up</button>
+        or <a href="{% url 'sign in' %}">Sign in</a>
     </form>
 {% endblock %}
