--- a/templates/shared/site.html
+++ b/templates/shared/site.html
@@ -6,9 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> {% block site_title %}NDT of Building Structures{% endblock %}</title>
+    <title>
+        {% block site_title %}
+            NDT of Building Structures
+        {% endblock %}
+    </title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/typography.css' %}">
@@ -25,7 +32,8 @@
 </head>
 
 <body>
-{% include 'partials/nav.html' %} {# load the nav.css #}
+<!-- load the nav.css -->
+{% include 'partials/nav.html' %}
 <div id="root">
     {% block site_content %}
     {% endblock %}
