--- a/static/css/details-test.css
+++ b/static/css/details-test.css
@@ -1,3 +1,9 @@
+.ndt-details {
+    border: 3px solid rgb(200, 200, 200);
+    margin-right: 10px;
+}
+
+
 .test-image,
 .test-info {
     padding: 15px;
@@ -5,11 +11,11 @@
 }
 
 .test-image {
-    width: 33%;
+    width: 40%;
 }
 
 .test-info {
-    width: 66%;
+    width: 59%;
     vertical-align: top;
 }
 
@@ -18,5 +24,9 @@
 }
 
 .list-test-details .list-item {
-    width: 49%;
+    /*width: 49%;*/
+}
+
+.btn {
+    vertical-align: bottom;
 }
