--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,10 @@ section header {
     display: inline-block;
 }
 
+.list-item {
+    padding-bottom: 20px;
+}
+
 .site-nav {
     background-color: rgb(248, 249, 250);
     display: flex;
