--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -7,7 +7,7 @@
         </ul>
         <ul class="list-horizontal">
             {% if user.is_authenticated %}
-{#                <li>>{{ user }}</li>#}
+                <li class="list-item"><a href="#">{{ user.username }}</a></li>
                 <li class="list-item"><a href="{% url 'sign out' %}">Sign out</a></li>
             {% else %}
                 <li class="list-item"><a href="{% url 'sign in' %}">Sign in</a></li>
