Models and CSS fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
 {% block site_content %}
     <section class="banner">
         <header>
-            <h1> Non-Destructive Test Methods for Control of Building Structures</h1>
-            <h2>Test methods you can order</h2>
+            <h1 class="info-title"> Non-Destructive Test Methods for Control of Building Structures</h1>
+            <h2 class="info-title">Learn more from our Catalogue</h2>
         </header>
 
         <div class="row">
