--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,11 @@
 section header {
     border-bottom: 3px solid rgb(248, 249, 250);
     margin: 0 15px 0 0;
-    padding-bottom: 25px;
+    padding-bottom: 5px;
+}
+
+.info-title {
+    text-align: center;
 }
 
 .list-horizontal .list-item {
@@ -45,11 +49,11 @@ a:hover {
     background-size: contain;
     display: block;
     content: '';
-    height: 800px;
+    height: 660px;
 }
 .banner {
     background-color: #e9ecef;
-    height: 1100px;
+    height: 880px;
     padding: 15px 15px 15px 15px;
 }
 
