--- a/templates/ndt_details.html
+++ b/templates/ndt_details.html
@@ -13,9 +13,12 @@
         </div>
         <div class="test-info">
             <ul class="list-test-details">
+                <li class="list-item"><span class="underline">Material Type:</span> {{ ndt.type.title }}</li>
                 <li class="list-item"><span class="underline">NDT Method:</span> {{ ndt.name }}</li>
-                <li class="list-item"><span class="underline">Standard:</span> {{ ndt.standard }}</li>
                 <li class="list-item"><span class="underline">Description:</span> {{ ndt.description }}</li>
+                <li class="list-item"><span class="underline">Standard:</span> {{ ndt.standard }}</li>
+                <li class="list-item"><span class="underline">Standard Title:</span> {{ ndt.title }}</li>
+                <li class="list-item"><span class="underline">Added by:</span> {{ ndt.user }}</li>
             </ul>
             <div>
                 <a href="{% url 'edit ndt' ndt.pk %}" class="btn btn-success">Edit</a>
